@@ -1,0 +1,65 @@
+This is the INSTALL file for the x11vnc-auto package.
+
+X11vnc-auto implements a service for providing automated VNC access to the
+local X11 display (:0). See README for more information.
+
+MANDATORY PREREQUISITES
+---------------------------------------------------------------------------
+You will need the following installed and configured properly on your
+system before building x11vnc-auto:
+
+Qt6 Toolkit, development toolkit, v6.2.4 or higher. See
+https://www.qt.io/product/qt6
+
+libvncserver, cross platform library for implementing VNC servers. See
+https://gitlab.freedesktop.org/xorg/lib/libxtst
+
+libXtst, X11 Record extension library. See
+https://gitlab.freedesktop.org/xorg/lib/libxtst
+
+Building the Package
+--------------------
+Once the prereequites have been installed, the package can be built by means
+of the following commands:
+
+./configure
+make
+make install
+
+Enabling the Service
+--------------------
+1) Set the VNC password by opening a shell for user 'rd' and doing:
+
+   vncpasswd
+
+2) Start the service by opening a shell for user 'root' and doing:
+
+   systemctl start x11vnc-auto.socket
+   systemctl enable x11vnc-auto.socket
+
+Enabling the Desktop Plugin
+---------------------------
+1) Add an instance of the 'genmon' plugin to the XFCE4 panel.
+
+2) Right-click on the plug-in on the Panel and select 'Properties'.
+
+3) Enter the following into the 'Command' field and then touch 'Save':
+'/home/rd/.vnc/xfce4-genmon.sh'.
+
+Distro-Specific Notes
+---------------------
+1) Ubuntu 22.02 LTS
+
+Required build packages: libsndfile1-dev qt6-base-dev docbook5-xml libxml2-utils docbook-xsl-ns xsltproc fop make g++ autoconf automake debhelper autoconf-archive gnupg pbuilder ubuntu-dev-tools apt-file libxtst-dev libvncserver-dev xfce4-genmon-plugin tightvncserver
+
+Configure script invocation: ./configure --prefix=/usr --bindir=/usr/lib/x11vnc-auto
+
+Environmental variables:
+  DOCBOOK_STYLESHEETS=/usr/share/xml/docbook/stylesheet/docbook-xsl-ns
+  DEBUILD_MAKE_ARGS=<optional-gcc-flags>
+
+Due to a bug in the Ubuntu 'qt6-base-dev-tools', it may be necessary to
+define the following environmental variable to allow Qt's moc(1) utility
+to be found by the build system:
+
+  QT6_MOC=/usr/lib/qt6/libexec/moc
