@@ -1,16 +1,6 @@
 This is the README file for the x11vnc-auto package.
 
-This implements a pair of systemd services for providing an automatic
-VNC login to view the running :0 display on a RHEL 7 system.
-
-To enable the service:
-
-1) Set the VNC password by opening a shell for user 'rd' and doing:
-
-   vncpasswd
-
-2) Start the service by opening a shell for user 'root' and doing:
-
-   systemctl start x11vnc-auto
-   systemctl enable x11vnc-auto
-
+X11vnc-auto implements a service for providing VNC access to the local
+X11 display (:0) by means of the x11vnc(1) utility. Also provided is
+a plug-in for the XFCE4 desktop that provides monitoring of existing VNC
+connections and the ability to 'kick' (terminate) undesired connections.
