@@ -4,7 +4,7 @@ dnl Autoconf configuration
 dnl
 dnl Use autoconf to process this into a configure script
 dnl
-dnl   (C) Copyright 2017-2021 Fred Gleason <fredg@paravelsystems.com>
+dnl   (C) Copyright 2017-2025 Fred Gleason <fredg@paravelsystems.com>
 dnl
 dnl   All Rights Reserved.
 dnl
@@ -28,14 +28,9 @@ AR_GET_DISTRO()
 AC_SUBST(DISTRO,$ar_gcc_distro)
 
 #
-# Check for Qt (Mandatory)
+# Check for Qt6 (Mandatory)
 #
 AQ_FIND_QT6(QT6,Core Gui Widgets Network,[],[AC_MSG_ERROR([*** Qt6 not found ***])])
-
-#
-# Check for Switchyard6 (Mandatory)
-#
-PKG_CHECK_MODULES(SWITCHYARD6,switchyard6,[],[AC_MSG_ERROR([*** Switchyard6 not found ***])])
 
 #
 # Configure RPM Build
@@ -54,15 +49,30 @@ else
   AC_SUBST(VENDOR,suse)
 fi 
 
+#
+# Generated File Warnings
+#
+AC_SUBST_FILE(GENERATED_C_FILE_WARNING)
+GENERATED_C_FILE_WARNING=$srcdir/helpers/c_file_warning
+
+AC_SUBST_FILE(GENERATED_SCRIPT_FILE_WARNING)
+GENERATED_SCRIPT_FILE_WARNING=$srcdir/helpers/script_file_warning
+
+AC_SUBST_FILE(GENERATED_XML_FILE_WARNING)
+GENERATED_XML_FILE_WARNING=$srcdir/helpers/xml_file_warning
+
 AC_CONFIG_FILES([ \
     conf/Makefile \
     debian/Makefile \
     debian/source/Makefile \
+    helpers/Makefile \
     icons/Makefile \
+    src/vncmon/paths.h \
     src/vncmon/Makefile \
     src/Makefile \
     systemd/x11vnc-auto@.service \
     systemd/Makefile \
+    x11vnc/build_x11vnc.sh \
     x11vnc/Makefile \
     build_debs.sh \
     x11vnc-auto.spec \
@@ -70,6 +80,7 @@ AC_CONFIG_FILES([ \
 ])
 AC_OUTPUT()
 chmod 755 build_debs.sh
+chmod 755 x11vnc/build_x11vnc.sh
 
 AC_MSG_NOTICE()
 AC_MSG_NOTICE(Now enter 'make' to build the software.)
