@@ -1,0 +1,12 @@
+<!--
+  **************************************************************************
+  *  WARNING! WARNING! WARNING!                                            *
+  *                                                                        *
+  *  The contents of this file are automatically generated by the build    *
+  *  system. Do not make any changes directly to this file; such changes   *
+  *  will be silently ignored and overwritten!                             *
+  *                                                                        *
+  *  The template whence this file's contents are derived are in a file    *
+  *  of the same name with ".in" appended.                                 *
+  **************************************************************************
+-->
